// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse |"grenade launcher reserves"|: ast 1`] = `
Object {
  "args": "grenade launcher reserves",
  "op": "filter",
  "type": "keyword",
}
`;

exports[`parse |"grenade launcher reserves"|: lexer 1`] = `
Array [
  Array [
    "filter",
    "keyword",
    "grenade launcher reserves",
  ],
]
`;

exports[`parse |"수집가"|: ast 1`] = `
Object {
  "args": "수집가",
  "op": "filter",
  "type": "keyword",
}
`;

exports[`parse |"수집가"|: lexer 1`] = `
Array [
  Array [
    "filter",
    "keyword",
    "수집가",
  ],
]
`;

exports[`parse |( power:>1000 and -modslot:arrival ) |: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": ">1000",
      "op": "filter",
      "type": "power",
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "arrival",
        "op": "filter",
        "type": "modslot",
      },
    },
  ],
}
`;

exports[`parse |( power:>1000 and -modslot:arrival ) |: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "filter",
    "power",
    ">1000",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |(is:hunter power:>=540) or (is:warlock power:>=560)|: ast 1`] = `
Object {
  "op": "or",
  "operands": Array [
    Object {
      "op": "and",
      "operands": Array [
        Object {
          "args": "hunter",
          "op": "filter",
          "type": "hunter",
        },
        Object {
          "args": ">=540",
          "op": "filter",
          "type": "power",
        },
      ],
    },
    Object {
      "op": "and",
      "operands": Array [
        Object {
          "args": "warlock",
          "op": "filter",
          "type": "warlock",
        },
        Object {
          "args": ">=560",
          "op": "filter",
          "type": "power",
        },
      ],
    },
  ],
}
`;

exports[`parse |(is:hunter power:>=540) or (is:warlock power:>=560)|: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "filter",
    "hunter",
    "hunter",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "power",
    ">=540",
  ],
  Array [
    ")",
  ],
  Array [
    "or",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "warlock",
    "warlock",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "power",
    ">=560",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |(is:weapon and is:sniperrifle) or not (is:armor and modslot:arrival)|: ast 1`] = `
Object {
  "op": "or",
  "operands": Array [
    Object {
      "op": "and",
      "operands": Array [
        Object {
          "args": "weapon",
          "op": "filter",
          "type": "weapon",
        },
        Object {
          "args": "sniperrifle",
          "op": "filter",
          "type": "sniperrifle",
        },
      ],
    },
    Object {
      "op": "not",
      "operand": Object {
        "op": "and",
        "operands": Array [
          Object {
            "args": "armor",
            "op": "filter",
            "type": "armor",
          },
          Object {
            "args": "arrival",
            "op": "filter",
            "type": "modslot",
          },
        ],
      },
    },
  ],
}
`;

exports[`parse |(is:weapon and is:sniperrifle) or not (is:armor and modslot:arrival)|: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "filter",
    "weapon",
    "weapon",
  ],
  Array [
    "and",
  ],
  Array [
    "filter",
    "sniperrifle",
    "sniperrifle",
  ],
  Array [
    ")",
  ],
  Array [
    "or",
  ],
  Array [
    "not",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "armor",
    "armor",
  ],
  Array [
    "and",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |(is:weapon is:sniperrifle) or (is:armor modslot:arrival)|: ast 1`] = `
Object {
  "op": "or",
  "operands": Array [
    Object {
      "op": "and",
      "operands": Array [
        Object {
          "args": "weapon",
          "op": "filter",
          "type": "weapon",
        },
        Object {
          "args": "sniperrifle",
          "op": "filter",
          "type": "sniperrifle",
        },
      ],
    },
    Object {
      "op": "and",
      "operands": Array [
        Object {
          "args": "armor",
          "op": "filter",
          "type": "armor",
        },
        Object {
          "args": "arrival",
          "op": "filter",
          "type": "modslot",
        },
      ],
    },
  ],
}
`;

exports[`parse |(is:weapon is:sniperrifle) or (is:armor modslot:arrival)|: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "filter",
    "weapon",
    "weapon",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "sniperrifle",
    "sniperrifle",
  ],
  Array [
    ")",
  ],
  Array [
    "or",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "armor",
    "armor",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |- is:exotic - (power:>1000)|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "op": "not",
      "operand": Object {
        "args": "exotic",
        "op": "filter",
        "type": "exotic",
      },
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": ">1000",
        "op": "filter",
        "type": "power",
      },
    },
  ],
}
`;

exports[`parse |- is:exotic - (power:>1000)|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "filter",
    "exotic",
    "exotic",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "power",
    ">1000",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |-(power:>1000 and -modslot:arrival)|: ast 1`] = `
Object {
  "op": "not",
  "operand": Object {
    "op": "and",
    "operands": Array [
      Object {
        "args": ">1000",
        "op": "filter",
        "type": "power",
      },
      Object {
        "op": "not",
        "operand": Object {
          "args": "arrival",
          "op": "filter",
          "type": "modslot",
        },
      },
    ],
  },
}
`;

exports[`parse |-(power:>1000 and -modslot:arrival)|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "power",
    ">1000",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |-is:equipped is:haspower is:incurrentchar|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "op": "not",
      "operand": Object {
        "args": "equipped",
        "op": "filter",
        "type": "equipped",
      },
    },
    Object {
      "args": "haspower",
      "op": "filter",
      "type": "haspower",
    },
    Object {
      "args": "incurrentchar",
      "op": "filter",
      "type": "incurrentchar",
    },
  ],
}
`;

exports[`parse |-is:equipped is:haspower is:incurrentchar|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "filter",
    "equipped",
    "equipped",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "haspower",
    "haspower",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "incurrentchar",
    "incurrentchar",
  ],
]
`;

exports[`parse |-is:exotic -is:locked -is:maxpower -is:tagged stat:total:<55|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "op": "not",
      "operand": Object {
        "args": "exotic",
        "op": "filter",
        "type": "exotic",
      },
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "locked",
        "op": "filter",
        "type": "locked",
      },
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "maxpower",
        "op": "filter",
        "type": "maxpower",
      },
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "tagged",
        "op": "filter",
        "type": "tagged",
      },
    },
    Object {
      "args": "<55",
      "op": "filter",
      "type": "stat:total",
    },
  ],
}
`;

exports[`parse |-is:exotic -is:locked -is:maxpower -is:tagged stat:total:<55|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "filter",
    "exotic",
    "exotic",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "locked",
    "locked",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "tagged",
    "tagged",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "stat:total",
    "<55",
  ],
]
`;

exports[`parse |-source:garden -source:lastwish sunsetsafter:arrival|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "op": "not",
      "operand": Object {
        "args": "garden",
        "op": "filter",
        "type": "source",
      },
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "lastwish",
        "op": "filter",
        "type": "source",
      },
    },
    Object {
      "args": "arrival",
      "op": "filter",
      "type": "sunsetsafter",
    },
  ],
}
`;

exports[`parse |-source:garden -source:lastwish sunsetsafter:arrival|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "filter",
    "source",
    "garden",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "source",
    "lastwish",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "sunsetsafter",
    "arrival",
  ],
]
`;

exports[`parse |-witherhoard|: ast 1`] = `
Object {
  "op": "not",
  "operand": Object {
    "args": "witherhoard",
    "op": "filter",
    "type": "keyword",
  },
}
`;

exports[`parse |-witherhoard|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "filter",
    "keyword",
    "witherhoard",
  ],
]
`;

exports[`parse |cluster tracking|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "cluster",
      "op": "filter",
      "type": "keyword",
    },
    Object {
      "args": "tracking",
      "op": "filter",
      "type": "keyword",
    },
  ],
}
`;

exports[`parse |cluster tracking|: lexer 1`] = `
Array [
  Array [
    "filter",
    "keyword",
    "cluster",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "keyword",
    "tracking",
  ],
]
`;

exports[`parse |is:armor2.0|: ast 1`] = `
Object {
  "args": "armor2.0",
  "op": "filter",
  "type": "armor2.0",
}
`;

exports[`parse |is:armor2.0|: lexer 1`] = `
Array [
  Array [
    "filter",
    "armor2.0",
    "armor2.0",
  ],
]
`;

exports[`parse |is:blue is:haspower -is:maxpower|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "blue",
      "op": "filter",
      "type": "blue",
    },
    Object {
      "args": "haspower",
      "op": "filter",
      "type": "haspower",
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "maxpower",
        "op": "filter",
        "type": "maxpower",
      },
    },
  ],
}
`;

exports[`parse |is:blue is:haspower -is:maxpower|: lexer 1`] = `
Array [
  Array [
    "filter",
    "blue",
    "blue",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "haspower",
    "haspower",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
]
`;

exports[`parse |is:blue is:haspower not:maxpower|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "blue",
      "op": "filter",
      "type": "blue",
    },
    Object {
      "args": "haspower",
      "op": "filter",
      "type": "haspower",
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "maxpower",
        "op": "filter",
        "type": "maxpower",
      },
    },
  ],
}
`;

exports[`parse |is:blue is:haspower not:maxpower|: lexer 1`] = `
Array [
  Array [
    "filter",
    "blue",
    "blue",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "haspower",
    "haspower",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
]
`;

exports[`parse |is:blue is:weapon or is:armor not:maxpower|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "blue",
      "op": "filter",
      "type": "blue",
    },
    Object {
      "op": "or",
      "operands": Array [
        Object {
          "args": "weapon",
          "op": "filter",
          "type": "weapon",
        },
        Object {
          "args": "armor",
          "op": "filter",
          "type": "armor",
        },
      ],
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "maxpower",
        "op": "filter",
        "type": "maxpower",
      },
    },
  ],
}
`;

exports[`parse |is:blue is:weapon or is:armor not:maxpower|: lexer 1`] = `
Array [
  Array [
    "filter",
    "blue",
    "blue",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "weapon",
    "weapon",
  ],
  Array [
    "or",
  ],
  Array [
    "filter",
    "armor",
    "armor",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
]
`;

exports[`parse |is:rocketlauncher (perk:"cluster" or perk:"tracking module")|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "rocketlauncher",
      "op": "filter",
      "type": "rocketlauncher",
    },
    Object {
      "op": "or",
      "operands": Array [
        Object {
          "args": "cluster",
          "op": "filter",
          "type": "perk",
        },
        Object {
          "args": "tracking module",
          "op": "filter",
          "type": "perk",
        },
      ],
    },
  ],
}
`;

exports[`parse |is:rocketlauncher (perk:"cluster" or perk:"tracking module")|: lexer 1`] = `
Array [
  Array [
    "filter",
    "rocketlauncher",
    "rocketlauncher",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "perk",
    "cluster",
  ],
  Array [
    "or",
  ],
  Array [
    "filter",
    "perk",
    "tracking module",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |is:rocketlauncher -"cluster" -"tracking module"|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "rocketlauncher",
      "op": "filter",
      "type": "rocketlauncher",
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "cluster",
        "op": "filter",
        "type": "keyword",
      },
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "tracking module",
        "op": "filter",
        "type": "keyword",
      },
    },
  ],
}
`;

exports[`parse |is:rocketlauncher -"cluster" -"tracking module"|: lexer 1`] = `
Array [
  Array [
    "filter",
    "rocketlauncher",
    "rocketlauncher",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "keyword",
    "cluster",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "keyword",
    "tracking module",
  ],
]
`;

exports[`parse |is:rocketlauncher -"cluster" -'tracking module'|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "rocketlauncher",
      "op": "filter",
      "type": "rocketlauncher",
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "cluster",
        "op": "filter",
        "type": "keyword",
      },
    },
    Object {
      "op": "not",
      "operand": Object {
        "args": "tracking module",
        "op": "filter",
        "type": "keyword",
      },
    },
  ],
}
`;

exports[`parse |is:rocketlauncher -"cluster" -'tracking module'|: lexer 1`] = `
Array [
  Array [
    "filter",
    "rocketlauncher",
    "rocketlauncher",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "keyword",
    "cluster",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "keyword",
    "tracking module",
  ],
]
`;

exports[`parse |is:weapon (is:sniperrifle or (is:armor and modslot:arrival))|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "weapon",
      "op": "filter",
      "type": "weapon",
    },
    Object {
      "op": "or",
      "operands": Array [
        Object {
          "args": "sniperrifle",
          "op": "filter",
          "type": "sniperrifle",
        },
        Object {
          "op": "and",
          "operands": Array [
            Object {
              "args": "armor",
              "op": "filter",
              "type": "armor",
            },
            Object {
              "args": "arrival",
              "op": "filter",
              "type": "modslot",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse |is:weapon (is:sniperrifle or (is:armor and modslot:arrival))|: lexer 1`] = `
Array [
  Array [
    "filter",
    "weapon",
    "weapon",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "sniperrifle",
    "sniperrifle",
  ],
  Array [
    "or",
  ],
  Array [
    "(",
  ],
  Array [
    "filter",
    "armor",
    "armor",
  ],
  Array [
    "and",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |is:weapon and is:sniperrifle or not is:armor and modslot:arrival|: ast 1`] = `
Object {
  "op": "or",
  "operands": Array [
    Object {
      "op": "and",
      "operands": Array [
        Object {
          "args": "weapon",
          "op": "filter",
          "type": "weapon",
        },
        Object {
          "args": "sniperrifle",
          "op": "filter",
          "type": "sniperrifle",
        },
      ],
    },
    Object {
      "op": "and",
      "operands": Array [
        Object {
          "op": "not",
          "operand": Object {
            "args": "armor",
            "op": "filter",
            "type": "armor",
          },
        },
        Object {
          "args": "arrival",
          "op": "filter",
          "type": "modslot",
        },
      ],
    },
  ],
}
`;

exports[`parse |is:weapon and is:sniperrifle or not is:armor and modslot:arrival|: lexer 1`] = `
Array [
  Array [
    "filter",
    "weapon",
    "weapon",
  ],
  Array [
    "and",
  ],
  Array [
    "filter",
    "sniperrifle",
    "sniperrifle",
  ],
  Array [
    "or",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "armor",
    "armor",
  ],
  Array [
    "and",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
]
`;

exports[`parse |is:weapon is:sniperrifle or is:armor and modslot:arrival|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "weapon",
      "op": "filter",
      "type": "weapon",
    },
    Object {
      "op": "or",
      "operands": Array [
        Object {
          "args": "sniperrifle",
          "op": "filter",
          "type": "sniperrifle",
        },
        Object {
          "op": "and",
          "operands": Array [
            Object {
              "args": "armor",
              "op": "filter",
              "type": "armor",
            },
            Object {
              "args": "arrival",
              "op": "filter",
              "type": "modslot",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse |is:weapon is:sniperrifle or is:armor and modslot:arrival|: lexer 1`] = `
Array [
  Array [
    "filter",
    "weapon",
    "weapon",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "sniperrifle",
    "sniperrifle",
  ],
  Array [
    "or",
  ],
  Array [
    "filter",
    "armor",
    "armor",
  ],
  Array [
    "and",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
]
`;

exports[`parse |is:weapon is:sniperrifle or not is:armor modslot:arrival|: ast 1`] = `
Object {
  "op": "and",
  "operands": Array [
    Object {
      "args": "weapon",
      "op": "filter",
      "type": "weapon",
    },
    Object {
      "op": "or",
      "operands": Array [
        Object {
          "args": "sniperrifle",
          "op": "filter",
          "type": "sniperrifle",
        },
        Object {
          "op": "not",
          "operand": Object {
            "args": "armor",
            "op": "filter",
            "type": "armor",
          },
        },
      ],
    },
    Object {
      "args": "arrival",
      "op": "filter",
      "type": "modslot",
    },
  ],
}
`;

exports[`parse |is:weapon is:sniperrifle or not is:armor modslot:arrival|: lexer 1`] = `
Array [
  Array [
    "filter",
    "weapon",
    "weapon",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "sniperrifle",
    "sniperrifle",
  ],
  Array [
    "or",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "armor",
    "armor",
  ],
  Array [
    "implicit_and",
  ],
  Array [
    "filter",
    "modslot",
    "arrival",
  ],
]
`;

exports[`parse |name:"Gahlran's Right Hand"|: ast 1`] = `
Object {
  "args": "gahlran's right hand",
  "op": "filter",
  "type": "name",
}
`;

exports[`parse |name:"Gahlran's Right Hand"|: lexer 1`] = `
Array [
  Array [
    "filter",
    "name",
    "gahlran's right hand",
  ],
]
`;

exports[`parse |name:"Hard Light"|: ast 1`] = `
Object {
  "args": "hard light",
  "op": "filter",
  "type": "name",
}
`;

exports[`parse |name:"Hard Light"|: lexer 1`] = `
Array [
  Array [
    "filter",
    "name",
    "hard light",
  ],
]
`;

exports[`parse |name:'Hard Light'|: ast 1`] = `
Object {
  "args": "hard light",
  "op": "filter",
  "type": "name",
}
`;

exports[`parse |name:'Hard Light'|: lexer 1`] = `
Array [
  Array [
    "filter",
    "name",
    "hard light",
  ],
]
`;

exports[`parse |not -not:maxpower|: ast 1`] = `
Object {
  "op": "not",
  "operand": Object {
    "op": "not",
    "operand": Object {
      "op": "not",
      "operand": Object {
        "args": "maxpower",
        "op": "filter",
        "type": "maxpower",
      },
    },
  },
}
`;

exports[`parse |not -not:maxpower|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "not",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
]
`;

exports[`parse |not forgotten|: ast 1`] = `
Object {
  "op": "not",
  "operand": Object {
    "args": "forgotten",
    "op": "filter",
    "type": "keyword",
  },
}
`;

exports[`parse |not forgotten|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "filter",
    "keyword",
    "forgotten",
  ],
]
`;

exports[`parse |not not not:maxpower|: ast 1`] = `
Object {
  "op": "not",
  "operand": Object {
    "op": "not",
    "operand": Object {
      "op": "not",
      "operand": Object {
        "args": "maxpower",
        "op": "filter",
        "type": "maxpower",
      },
    },
  },
}
`;

exports[`parse |not not not:maxpower|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "not",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
]
`;

exports[`parse |not not:maxpower|: ast 1`] = `
Object {
  "op": "not",
  "operand": Object {
    "op": "not",
    "operand": Object {
      "args": "maxpower",
      "op": "filter",
      "type": "maxpower",
    },
  },
}
`;

exports[`parse |not not:maxpower|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
]
`;

exports[`parse |not:maxpower|: ast 1`] = `
Object {
  "op": "not",
  "operand": Object {
    "args": "maxpower",
    "op": "filter",
    "type": "maxpower",
  },
}
`;

exports[`parse |not:maxpower|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "filter",
    "maxpower",
    "maxpower",
  ],
]
`;

exports[`parse |perk:"수집가"|: ast 1`] = `
Object {
  "args": "수집가",
  "op": "filter",
  "type": "perk",
}
`;

exports[`parse |perk:"수집가"|: lexer 1`] = `
Array [
  Array [
    "filter",
    "perk",
    "수집가",
  ],
]
`;

exports[`parse |perk:수집가|: ast 1`] = `
Object {
  "args": "수집가",
  "op": "filter",
  "type": "perk",
}
`;

exports[`parse |perk:수집가|: lexer 1`] = `
Array [
  Array [
    "filter",
    "perk",
    "수집가",
  ],
]
`;

exports[`parse |‘grenade launcher reserves’|: ast 1`] = `
Object {
  "args": "grenade launcher reserves",
  "op": "filter",
  "type": "keyword",
}
`;

exports[`parse |‘grenade launcher reserves’|: lexer 1`] = `
Array [
  Array [
    "filter",
    "keyword",
    "grenade launcher reserves",
  ],
]
`;

exports[`parse |“grenade launcher reserves”|: ast 1`] = `
Object {
  "args": "grenade launcher reserves",
  "op": "filter",
  "type": "keyword",
}
`;

exports[`parse |“grenade launcher reserves”|: lexer 1`] = `
Array [
  Array [
    "filter",
    "keyword",
    "grenade launcher reserves",
  ],
]
`;

exports[`parse |수집가|: ast 1`] = `
Object {
  "args": "수집가",
  "op": "filter",
  "type": "keyword",
}
`;

exports[`parse |수집가|: lexer 1`] = `
Array [
  Array [
    "filter",
    "keyword",
    "수집가",
  ],
]
`;
